Adding and fixing sections

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<!-- <p>home works!</p> -->
+<section>
+    <header class="masthead bg-primary text-white text-center">
+        <div class="container d-flex align-items-center flex-column">
+            <!-- Masthead Avatar Image-->
+            <img class="masthead-avatar mb-5" src="../../../../assets/images/home/me.jpg" alt="Ing Raúl Adolfo Torres Vargas photo" />
+            <!-- Masthead Heading-->
+            <div class="text-typing">
+                <h1 class="masthead-heading css-typing mb-0">Welcome</h1>
+            <h2 class="masthead-heading mt-3 mb-0">I'm Raúl Adolfo Torres Vargas</h2>
+            </div>
+            <!-- Masthead Subheading-->
+            <div class="typewriter">
+                <p class="masthead-subheading mb-0">Frontend Developer, WebMaster, CEO and Founder of ESDMX (Easy Software Design México)</p>
+              </div>
+            
+        </div>
+    </header>
+</section>
