--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -17,6 +17,6 @@
     <button mat-menu-item [routerLink]="['about']">About</button>
     <!-- 
     <button mat-menu-item [routerLink]="['skills']">Skills</button> -->
-    <button mat-menu-item [routerLink]="['companies-users']">Companies & Users</button>
+    <button mat-menu-item [routerLink]="['companies']">Companies & Users</button>
     <!-- <button mat-menu-item [routerLink]="['contact']">Contact</button> -->
 </mat-menu>
