--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,5 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "https://cdn.jsdelivr.net/npm/[email protected]/css/bulma.min.css";
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap');
