--- a/src/app/company/pages/robemex-projects/robemex-projects.component.html
+++ b/src/app/company/pages/robemex-projects/robemex-projects.component.html
@@ -6,8 +6,8 @@
       <h2 class="text-center text-white fw-bold fs-1">ROBEMEX PROJECTS</h2>
     </div>
     <hr>
-    <div class="row mx-auto my-5 justify-content-center mt-5 pt-5">
-      <div id="carouselExampleCaptions" class="carousel slide mb-5" data-bs-ride="carousel">
+    <div class="row mx-auto justify-content-center mt-5 pt-5">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -24,7 +24,7 @@
           <div class="carousel-item active">
             <a href="https://robemex.com" target="_blank">
               <img src="../../../../assets/images/company/products/robemex/robemex.png" class="d-block w-50 mx-auto"
-                alt="...">
+                alt="ROBEMEX's Logo">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-white text-center fw-bold">ROBEMEX</h3>
               </div>
@@ -33,7 +33,7 @@
           <div class="carousel-item">
             <a href="https://mexizcal.com" target="_blank">
               <img src="../../../../assets/images/company/products/robemex/mexizcal.png" class="d-block w-50 mx-auto"
-                alt="...">
+                alt="Mexizcal's Logo">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-white text-center fw-bold">Mexizcal</h3>
               </div>
@@ -41,8 +41,8 @@
           </div>
           <div class="carousel-item">
             <a href="https://rompopecarmelita.com" target="_blank">
-              <img src="../../../../assets/images/company/products/robemex/carmelita-español.png"
-                class="d-block  mx-auto" alt="...">
+              <img src="../../../../assets/images/company/products/robemex/carmelita-español.png"
+                class="d-block  mx-auto" alt="Rompope Carmelita's Logo">
               <div class="carousel-caption d-none d-md-block carmelita">
                 <h3 class="text-white text-center fw-bold">Rompope Carmelita Spanish Version</h3>
               </div>
@@ -51,7 +51,7 @@
           <div class="carousel-item">
             <a href="https://usa.rompopecarmelita.com" target="_blank">
               <img src="../../../../assets/images/company/products/robemex/carmelita-english.png"
-                class="d-block w-50  mx-auto" alt="...">
+                class="d-block w-50  mx-auto" alt="Rompope Carmelita's Logo">
               <div class="carousel-caption d-none d-md-block carmelita-english">
                 <h3 class="text-white text-center fw-bold">Rompope Carmelita English Version</h3>
               </div>
@@ -60,7 +60,7 @@
           <div class="carousel-item">
             <a href="https://rompopedelaabuela.com" target="_blank">
               <img src="../../../../assets/images/company/products/robemex/rompope-de-la-abuela.png"
-                class="d-block  mx-auto" alt="...">
+                class="d-block  mx-auto" alt="Rompope de la Abuela Logo">
               <div class="carousel-caption d-none d-md-block abuela">
                 <h3 class="text-white text-center fw-bold">Rompope de la Abuela</h3>
               </div>
