--- a/src/app/company/pages/tatichstudio-projects/tatichstudio-projects.component.html
+++ b/src/app/company/pages/tatichstudio-projects/tatichstudio-projects.component.html
@@ -5,8 +5,8 @@
         <div class="row mx-auto my-5 justify-content-center mt-5 pt-5">
             <h2 class="text-center text-white fw-bold fs-1">TATICH STUDIO PROJECTS</h2>
           </div>
-      <div class="row mx-auto my-5 justify-content-center mt-5 pt-5">
-        <div id="carouselExampleCaptions" class="carousel slide mb-5" data-bs-ride="carousel">
+      <div class="row mx-auto justify-content-center mt-5 pt-5">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -15,7 +15,7 @@
             <div class="carousel-item active">
               <a href="https://ricanremo.com/" target="_blank">
                 <img src="../../../../assets/images/company/products/tatich-studio/bloopers.png" class="d-block w-50 mx-auto"
-                  alt="...">
+                  alt="Bloopers's Logo">
                 <div class="carousel-caption d-none d-md-block">
                   <!-- <h3 class="text-white text-center fw-bold">ROBEMEX</h3> -->
                 </div>
